fixed hover options getting cut off

--- a/src/public/scss/components/_hover-options.scss
+++ b/src/public/scss/components/_hover-options.scss
@@ -1,8 +1,4 @@
 .hover-options {
-  @include displayFlex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   position: absolute;
   // top: 0;
   top: 50%;
@@ -10,22 +6,31 @@
   width: 100%;
   transform: translate(0, -50%);
   max-height: 0*$em;
-  padding: 0 .2*$em;
   background-color: rgba(black, .4);
   text-align: center;
   overflow-y: auto;
   overflow-x: hidden;
-  > * {
-    display: inline-block;
-    margin: .5*$em 0;
-    padding: .2*$em;
-    border-radius: .2*$em;
-    background-color: $primary;
-    color: black;
-    cursor: pointer;
-    a {
-      text-decoration: none;
-      word-wrap: break-word;
+  .wrapper {
+    @include displayFlex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 .2*$em;
+
+    > * {
+      display: inline-block;
+      margin: .5*$em 0;
+      padding: .2*$em;
+      border-radius: .2*$em;
+      background-color: $primary;
+      color: black;
+      cursor: pointer;
+      a {
+        text-decoration: none;
+        word-wrap: break-word;
+      }
     }
   }
   .follow {}
