--- a/src/public/scss/components/_stream-list-item.scss
+++ b/src/public/scss/components/_stream-list-item.scss
@@ -51,37 +51,6 @@
       margin-top: .2*$em;
     }
   }
-  .hover-options {
-    @include displayFlex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    position: absolute;
-    // top: 0;
-    top: 50%;
-    left: 0;
-    transform: translate(0, -50%);
-    width: 100%;
-    max-height: 0*$em;
-    padding: 0 .5*$em;
-    background-color: rgba(black, .4);
-    text-align: center;
-    overflow: hidden;
-    > * {
-      display: inline-block;
-      margin: .5*$em 0;
-      padding: .2*$em;
-      border-radius: .2*$em;
-      background-color: $primary;
-      color: black;
-      cursor: pointer;
-      a {
-        text-decoration: none;
-      }
-    }
-    .follow {}
-    .append-stream {}
-  }
 }
 
 @media (max-width: 1024px) {
